feat: token introspection
